Changes towards version 0.6:
- Generic DoPopupWindow() command for status messages of all sorts
- Update the 'current selection' icon after deleting or inserting ships
  in a fleet in SuperMelee - SvdB
- Correct some background pixels in melebkgd.{25,26}.png - SvdB
- Unix build scripts improvements. - SvdB
- Build fixes for MacOS X (with thanks to Nic) - SvdB
- Ships in battle can resume normal speed in all circumstances after
  the enemy Avatar's tractor beam disengages (bug #860; this is a
  netplay desynchronizing change) - Alex
- Conversation summary breaks lines based on actual chars/words
  that fit (bug #916) - Alex
- Netplay configuration dialog - Michael
- Better error message for 'Kernel failed to load' (#917) - Michael
- Pushbutton for connecting to netplay, in anticipation of a full 
  configuration dialog later - Michael
- Cleanup of comm.c - SvdB
- Netplay - SvdB
- Added step-by-step instructions for compilation on MSVC++ - SvdB
- All output done in binary mode, due to uio/Win32 conflicts (#912) - Michael
- Online key configuration menu actually functional now - Michael
- Tweak to Lander UI - Special Weapon is now explicitly Lander Escape, 
  just as Warp Escape is - Michael
- Default key configuration changed slightly; online display of current 
  key bindings - Michael
- Input templates can now be renamed, both online and off - Michael
- Fixed an integer-size error that was causing crashes on AMD64, from 
  Solomon Peachy (#895) - Michael
- Added some generic lib code to be used by future code. - SvdB
- Joystick support is now optional; from SvdB, Alex
- Restructed and normalized savegame and game-state reading/writing code;
  savegames are now compatible between same-endian 32- and 64-bit systems;
  savegames from prior 64-bit builds cannot be used - Alex
- (Unix build scripts) Failed mkdep doesn't result in empty .d files
  anymore. Now using the gcc 3 "-MF" and "-MT" options. - SvdB